# pippa

./: .env.example  .gitignore  CLAUDE.md  README.md  TRAINING_GUIDE.md  add_standard_eval_to_scripts.py  arithmetic_eval_dataset_card.md  create_arithmetic_eval_dataset.py  evaluate_base_model_on_standard.py  evaluate_models_on_standard_dataset.py  gr00t_inference.ipynb  monitor_experiments.py  quick_base_eval.py  quick_reevaluate_key_models.py  reevaluate_available_models.py  reevaluate_models_with_standard.py  remote_aggressive_overfit.sh  remote_aggressive_overfit_fixed.sh  remote_arithmetic_overfit_aggressive.sh  remote_binary_overfit_unique.sh  remote_binary_perfect_overfit.sh  remote_comparison_overfit.sh  remote_train.sh  requirements.txt  retrain_long_epochs_standard.py  retrain_mixed_dataset_standard.py  retrain_mixed_small_numbers_standard.py  retrain_smaller_numbers_standard.py  retrain_ultra_diversity_standard.py  run_aggressive_overfit.sh  run_verifiable_experiments.sh  test_arithmetic_eval_dataset.py  train_early_stopping.py  train_grpo.py  train_grpo.py.backup  train_grpo_arithmetic_curriculum.py  train_grpo_arithmetic_curriculum.py.backup  train_grpo_arithmetic_debug_completions.py  train_grpo_arithmetic_expanded_dataset.py  train_grpo_arithmetic_expanded_dataset.py.backup  (+74 more)
absolute_zero/: README.md  check_final_test_run.py  (+35 more)
gr00t-rl/: INTEGRATION_ROADMAP.md  NEXT_STEPS.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  __init__.py  example_usage.py  pyproject.toml  setup.sh  setup_wandb.py
gr00t-rl-lerobot/: README.md  USAGE.md  pyproject.toml
gr00t-rl-lerobot/environments/: __init__.py  fetch_so101_coupled.py  fetch_wrapper.py
gr00t-rl-lerobot/policies/: gr00t_policy.py
gr00t-rl-lerobot/scripts/: compare_environments.py  launch_training.sh  test_env_simple.py  test_fetch_adaptations.py  test_fetch_integration.py  test_groot_coupled_env.py  test_groot_integration.py  train_sac_fetch.py  train_sac_groot_minimal.py  train_sac_simple.py
gr00t-rl-lerobot/utils/: gr00t_loader.py
gr00t-rl/algorithms/: gr00t_policy_wrapper.py  gr00t_wrapper.py  grpo_gr00t.py  ppo_gr00t.py  ppo_gr00t_v2.py
gr00t-rl/configs/: grpo_config.py  isaac_lab_ppo_cfg.py  ppo_config.py  ppo_config_v2.py
gr00t-rl/environments/: fetch_wrapper.py  isaac_env.py  isaac_gym_wrapper.py  vec_isaac_env.py
gr00t-rl/research_journal/: adapt_gr00t.md  grpo_robotics_analysis.md  isaac_lab_integration_plan.md  ppo_implementation_guide.md  ppo_implementation_learnings.md  ppo_implementation_verification.md  ppo_isaac_integration_simplified.md
gr00t-rl/scripts/: adapt_gr00t_so101_to_fetch.py  collect_fetch_demonstrations.py  debug_ppo_minimal.py  debug_video_tracking.py  explore_fetch_env.py  setup_gymnasium_robotics.py  setup_isaac_groot.sh  test_fetch_environments.py  test_fetch_simple.py  test_grpo_simple.py  test_isaac_cartpole.py  test_isaac_env_simple.py  test_isaac_integration.py  test_isaac_lab_env.py  test_isaac_lab_import.py  test_isaac_pendulum.py  test_ppo_basic_envs.py  test_ppo_basic_wandb.py  test_ppo_debug.py  test_ppo_isaac_cartpole_simple.py  test_ppo_lite_video.py  test_ppo_simple.py  test_ppo_simple_debug.py  test_ppo_v2.py  test_ppo_video.py  test_ppo_wandb.py  test_training_quick.py  test_vec_env.py  test_video_minimal.py  test_video_table_minimal.py  test_video_table_short_episodes.py  test_video_table_upload.py  test_video_upload.py  test_wandb_full.py  test_wandb_logging.py  test_wandb_video.py  train_grpo.py  train_grpo_fetch.py  train_isaac_ppo.py  train_isaac_simple.py  (+9 more)
gr00t-rl/utils/: buffers.py  logging.py  networks.py  normalization.py  rewards.py
gr00t-tuning/: .env.example  .gitignore  COMPARISON_BLOG_VS_OUR_TRAINING.md  README.md  TRAINING_LOG.md  evaluate_gr00t.py  pyproject.toml  setup.sh  setup_venv.sh  test_overfit.py  test_overfit_simple.py  train_gr00t.py  train_gr00t_batch_size_experiment.py  train_gr00t_blog_exact.py  train_gr00t_demo_blog_settings.py  train_gr00t_full_finetune.py  train_gr00t_minimal.py  train_gr00t_overfit_best.py  train_gr00t_overfit_demo.py  train_gr00t_overfit_long.py  train_gr00t_overfit_lower_lr.py  train_gr00t_overfitting.py  train_gr00t_rl.py  train_gr00t_simple_overfit.py  train_gr00t_ultimate_config.py  train_gr00t_very_low_lr.py  train_grpo_overfit_arithmetic.py
(+47 files in other folders)
