[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gr00t-rl"
version = "0.1.0"
description = "Reinforcement Learning for NVIDIA GR00T Robot Foundation Model"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["robotics", "reinforcement-learning", "gr00t", "ppo", "isaac-lab"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0,<2.0",  # Avoid numpy 2.0 issues
    "gymnasium>=0.28.0",
    "gymnasium-robotics>=1.2.0",
    "mujoco>=2.3.0",
    "wandb>=0.15.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "tensorboard>=2.12.0",
    "tqdm>=4.65.0",
    "psutil>=5.9.0",
    "gputil>=1.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.0.261",
    "pre-commit>=3.2.0",
    "mypy>=1.2.0",
]
isaac = [
    # Isaac Lab dependencies will be added later
    # For now, we'll handle Isaac Lab separately
]
all = ["gr00t-rl[dev]"]

[project.scripts]
gr00t-train = "scripts.train_ppo_v2:main"
gr00t-test = "scripts.test_ppo_wandb:main"

[project.urls]
Homepage = "https://github.com/morganmcg1/pippa"
Documentation = "https://github.com/morganmcg1/pippa/tree/main/gr00t-rl"
Repository = "https://github.com/morganmcg1/pippa.git"
Issues = "https://github.com/morganmcg1/pippa/issues"

[tool.setuptools]
packages = ["algorithms", "configs", "environments", "scripts", "utils"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=gr00t_rl --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true